--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -1,1 +1,94 @@
-
+name: Bug Report
+description: File a bug report
+title: "[Bug]: "
+labels: ["bug", "triage"]
+assignees:
+  - octocat
+body:
+  - type: markdown
+    attributes:
+      value: |
+        Thanks for taking the time to fill out this bug report!
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: What happened?
+      description: Please tell us what's not working as expected. Please include callstacks and error messages if necessary.
+      placeholder: Tell us what you see!
+    validations:
+      required: true
+  - type: dropdown
+    id: runtime
+    attributes:
+      label: Runtime
+      description: What runtime of our software are you using?
+      options:
+        - Evergreen
+        - Fixed version
+    validations:
+      required: true
+  - type: input
+    id: sdk-version
+    attributes:
+      label: SDK Version
+      description: Please enter the SDK version you are using.
+    validations:
+      required: true
+  - type: dropdown
+    id: framework
+    attributes:
+      label: Framework
+      description: What framework are you using?
+      options:
+        - Win32
+        - WPF
+        - Winform
+        - UWP
+        - WinUI3
+        - Other/not sure
+    validations:
+      required: true
+  - type: dropdown
+    id: os
+    attributes:
+      label: OS
+      description: What operating system are you using?
+      options:
+        - Win11
+        - Win10
+        - Win7
+        - Other
+    validations:
+      required: true
+  - type: checkboxes
+    id: regression
+    attributes:
+      label: Regression
+      description: Was this working before but has regressed?
+      options:
+        - label: Yes
+        - label: No
+    validations:
+      required: false
+  - type: input
+    id: last-working-version
+    attributes:
+      label: Last Working Version
+      description: If yes, what version did this last work on?
+    validations:
+      required: false
+  - type: textarea
+    id: repro-steps
+    attributes:
+      label: Repro Steps
+      description: Minimal steps needed to reproduce the bug. Call out the Expected behavior, and the Actual behavior.
+    validations:
+      required: false
+  - type: checkboxes
+    id: terms
+    attributes:
+      label: Code of Conduct
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      options:
+        - label: I agree to follow this project's Code of Conduct
+          required: true
