--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -1,9 +1,7 @@
 name: Bug Report
 description: File a bug report
 title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - octocat
+labels: ["bug"]
 body:
   - type: markdown
     attributes:
