--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -65,6 +65,7 @@ body:
       description: Was this working before but has regressed?
       options:
         - label: Yes
+          required: false
     validations:
       required: false
   - type: input
