--- a/.github/ISSUE_TEMPLATE/Feature request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature request.yml
@@ -1,4 +1,4 @@
-name: Feature Request
+name: Feature Request/API Enhancement
 description: Suggest a new feature or enhancement for this project
 title: "[Feature]: "
 labels: ["enhancement"]
