--- a/.github/ISSUE_TEMPLATE/Feature request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature request.yml
@@ -1,5 +1,5 @@
 name: Feature Request/API Enhancement
-description: Suggest a new feature or enhancement for this project
+description: Suggest a new feature/enhancement for this project
 title: "[Feature]: "
 labels: ["enhancement"]
 body:
