--- a/.github/ISSUE_TEMPLATE/Feature request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature request.yml
@@ -37,21 +37,21 @@ body:
       label: Importance
       description: May you help us understand the importance of this ask to you?
       options:
-        - label: Blocking issue. My app's basic functions wouldn't work without this.
-        - label: Impactful. My app's user experience would be significantly compromised.
-        - label: Nice to have. There're other ways to tackle this, but would be good if there're official API support.
+        - label: Critical. My app's basic functions wouldn't work without it.
+        - label: Impactful. My app's user experience would be significantly compromised without it.
+        - label: Nice to have. There're other ways to tackle this, but having official API support would be beneficial.
     validations:
       required: true
   - type: checkboxes
     id: development-phase
     attributes:
       label: Development Phase
-      description: Would you mind sharing which development phase your app is at?
+      description: Could you please indicate the current stage of your application's development? Please select the option that best applies:
       options:
-        - label: Has a enterprise user base
-        - label: Has a consumer user base
-        - label: Haven't released yet but has commitment
-        - label: Just exploring and future release plan TBD
+        - label: The app is being used by an enterprise user base. 
+        - label: The app is being used by a consumer user base. 
+        - label: The app has not been released yet, but there's a commitment to do so. 
+        - label: The app is in exploratory phase and future release plans are TBD. 
     validations:
       required: true
 
