--- a/.github/ISSUE_TEMPLATE/Feature request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature request.yml
@@ -3,18 +3,18 @@ description: Suggest a new feature/enhancement for this project
 title: "[Feature]: "
 labels: ["enhancement"]
 body:
-  - type: textarea
+  - type: Input
     id: app-introduction
     attributes:
-      label: App Introduction
+      label: Background
       description: May you briefly introduce what kind of app you are building?
     validations:
       required: false
   - type: textarea
     id: feature-need
     attributes:
-      label: Feature description
-      description: May you help us understand why you need this feature? And some examples of the scenario/use cases you are trying to accomplish?
+      label: Scenario and problems
+      description: May you help us understand why you need this feature? Would be great to give a few examples of the scenario/use cases you are trying to accomplish.
     validations:
       required: true
   - type: textarea
