--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -25,7 +25,7 @@ body:
 - id: runtime-version
   type: input
   attributes:
-    description: Please enter the Runtime version you are using. (e.g., 114.0.1823.79)
+    description: Please enter the Runtime version you are using. (for example 114.0.1823.79)
     label: Runtime Version
   validations:
     required: true
@@ -38,7 +38,7 @@ body:
       Win32: Win32
       WPF: WPF
       Winform: Winform
-      WinUI2: UWP
+      UWP: UWP
       WinUI3: WinUI3
       Unity Plugin: Unity Plugin
       Other: Other
