--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -48,7 +48,7 @@ body:
   type: checkboxes
   attributes:
     description: What operating system are you using?
-    label: OS
+    label: Operating System
     options:
     - Windows 10: Windows 10
     - Windows 11: Windows 11
