--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -18,7 +18,7 @@ body:
 - id: sdk-version
   type: input
   attributes:
-    description: Please enter the SDK version you are using.
+    description: Please enter the SDK version you are using.(e.g. 1.0.1905-prerelease)
     label: SDK Version
   validations:
     required: true
@@ -35,13 +35,10 @@ body:
     description: What framework are you using?
     label: Framework
     options:
-    - Win32: Win32
-    - WPF: WPF
-    - Winform: Winform
-    - UWP: UWP
-    - WinUI3: WinUI3
-    - Unity Plugin: Unity Plugin
-    - Other: Other
+    - WPF
+    - Winform
+    - UWP
+    - Unity Plugin
   validations:
     required: true
 - id: os
@@ -90,6 +87,6 @@ body:
   type: input
   attributes:
     description: If this is a regression, what was the last working version of SDK and Runtime? (e.g. SDK 1.0.1774.30, Runtime 114.0.1823.32)
-    label: Last Working Version Detailed
+    label: Last Working Version
   validations:
     required: false
