--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -6,7 +6,7 @@ body:
 - type: markdown
   attributes:
     value: 
-      Thanks for taking the time to fill out this bug report. It will greatly assist us in accurately identifying the issue. Here is a good sample report: https://github.com/novac42/testproject/issues/13
+      Thanks for taking the time to fill out this bug report. It will greatly assist us in accurately identifying the issue. Here is a good sample report.**link**
 - id: what-happened
   type: textarea
   attributes:
