--- a/.github/ISSUE_TEMPLATE/Bug report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report.yml
@@ -6,13 +6,13 @@ body:
 - type: markdown
   attributes:
     value: 
-      Thanks for taking the time to fill out this bug report. It will greatly assist us in accurately identifying the issue. Here is a good sample report.**link**
+      Thanks for taking the time to fill out this bug report. It will greatly assist us in accurately identifying the issue. Here is a [good sample report](https://github.com/MicrosoftEdge/WebView2Feedback/issues/3642)
 - id: what-happened
   type: textarea
   attributes:
     description: Please tell us what's not working as expected. Please include callstacks and error messages if possible.
-    label: What happened and how to repro
-    placeholder: Please describe the issue you encountered, and minimal steps needed to reproduce the bug.
+    label: What happened?
+    placeholder: Please describe the issue you encountered. Callstacks and error messages are helpful.
   validations:
     required: true
 - id: importance
@@ -26,7 +26,10 @@ body:
        - label: Moderate. This issue has a certain impact on my app. 
   validations:
       required: true
-
+- type: markdown
+  attributes:
+    value: 
+        It's recommended to test your web content in the WebView2 control against Microsoft Edge Insider (preview) Channels (Beta, Dev, or Canary). [Download here](https://www.microsoft.com/en-us/edge/download/insider?form=MA13FJ). For more information please checkout the [development best practices](https://learn.microsoft.com/en-us/microsoft-edge/webview2/concepts/developer-guide#run-compatibility-tests-regularly-when-using-the-evergreen-runtime).
 - id: runtime-channel
   type: checkboxes
   attributes:
@@ -34,7 +37,7 @@ body:
      description: Are you using stable release or prerelease of WebView2 runtime?
      options:
        - label: Stable release 
-       - label: Prerelease (Canary/Dev Channel)      
+       - label: Prerelease (Canary/Dev/Beta)      
   validations:
       required: true
 
@@ -66,6 +69,7 @@ body:
     - UWP/WinUI2
     - WinUI3
     - Unity Plugin
+    - Other
   validations:
     required: true
 - id: os
@@ -93,8 +97,9 @@ body:
 - id: repro-steps
   type: textarea
   attributes:
-    description: Minimal steps needed to reproduce the bug. Please be clear on what the expected behavior is V.S. what the actual behavior is. Please provide a minimal sample app that demonstrates the issue, if possible.
+    description: Minimal steps needed to reproduce the bug. Please be clear on what the expected behavior is vs. what the actual behavior is. Please provide a minimal sample app that demonstrates the issue, if possible.
     label: Repro steps and sample app
+    placeholder: Please let us know how to reproduce this bug. A sample app would be very helpful. 
   validations:
     required: false
 - id: regression
@@ -103,7 +108,7 @@ body:
     description: Was this working before, but has regressed?
     label: Regression
     options:
-    - No, first time seeing this
+    - No, this never worked
     - Regression in Runtime
     - Regression in SDK
     - Don't know
@@ -113,6 +118,6 @@ body:
   type: input
   attributes:
     description: If this is a regression, what was the last working version of SDK and Runtime? (e.g. SDK 1.0.1774.30, Runtime 114.0.1823.32)
-    label: If it's regression, last working version
+    label: Last working version (if regression)
   validations:
     required: false
