--- a/.github/ISSUE_TEMPLATE/Bug report_form.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report_form.yml
@@ -20,9 +20,9 @@ body:
   attributes:
      label: Importance
      description: May you help us understand the level of importance of this ask to you?
-     multiple: true
+     multiple: false
      options:
-       - Please select
+       - ----Please select----
        - Blocking. My app's basic functions cannot work.
        - Important. My app's user experience is significantly compromised.
        - Moderate. This issue has a certain impact on my app. 
@@ -33,14 +33,17 @@ body:
     value: |
         **Tip:** it's recommended to test your web content in the WebView2 control against Microsoft Edge Insider (preview) Channels (Beta, Dev, or Canary). [Download here](https://www.microsoft.com/en-us/edge/download/insider?form=MA13FJ). For more information please checkout the [development best practices](https://learn.microsoft.com/en-us/microsoft-edge/webview2/concepts/developer-guide#run-compatibility-tests-regularly-when-using-the-evergreen-runtime).
 - id: runtime-channel
-  type: checkboxes
+  type: dropdown
   attributes:
      label: Runtime Channel
      description: Are you using stable release or prerelease of WebView2 runtime?
+     multiple: true
      options:
-       - label: Stable release 
-       - label: Prerelease (Canary/Dev/Beta)      
-  
+       - ----Please select----
+       - Stable release 
+       - Prerelease (Canary/Dev/Beta)      
+  validations:
+      required: true
 
 - id: runtime-version
   type: input
@@ -74,18 +77,22 @@ body:
   validations:
     required: true
 - id: os
-  type: checkboxes
+  type: dropdown
   attributes:
     description: What operating system are you using?
     label: Operating System
+    multiple: true
     options:
-    - label: Windows 10
-    - label: Windows 11
-    - label: Earlier than Windows 10 (deprecated)
-    - label: Windows Server
-    - label: Xbox
-    - label: Hololens
-    - label: Other
+    - ----Please select----
+    - Windows 10
+    - Windows 11
+    - Earlier than Windows 10 (deprecated)
+    - Windows Server
+    - Xbox
+    - Hololens
+    - Other
+  validations:
+    required: true
 
 - id: os-version
   type: input
