--- a/.github/ISSUE_TEMPLATE/Bug report_form.yml
+++ b/.github/ISSUE_TEMPLATE/Bug report_form.yml
@@ -28,23 +28,21 @@ body:
        - Moderate. This issue has a certain impact on my app. 
   validations:
       required: true
-- type: markdown
-  attributes:
-    value: |
-        **Tip:** it's recommended to test your web content in the WebView2 control against Microsoft Edge Insider (preview) Channels (Beta, Dev, or Canary). [Download here](https://www.microsoft.com/en-us/edge/download/insider?form=MA13FJ). For more information please checkout the [development best practices](https://learn.microsoft.com/en-us/microsoft-edge/webview2/concepts/developer-guide#run-compatibility-tests-regularly-when-using-the-evergreen-runtime).
 - id: runtime-channel
   type: dropdown
   attributes:
      label: Runtime Channel
-     description: Are you using stable release or prerelease of WebView2 runtime?
+     description: Are you seeing this issue in stable release or prerelease of WebView2 runtime?
      multiple: true
      options:
-       - ----Please select----
        - Stable release 
        - Prerelease (Canary/Dev/Beta)      
   validations:
       required: true
-
+- type: markdown
+  attributes:
+    value: |
+        **Tip:** it's recommended to test your web content in the WebView2 control against Microsoft Edge Insider (preview) Channels (Beta, Dev, or Canary). [Download here](https://www.microsoft.com/en-us/edge/download/insider?form=MA13FJ). For more information please checkout the [development best practices](https://learn.microsoft.com/en-us/microsoft-edge/webview2/concepts/developer-guide#run-compatibility-tests-regularly-when-using-the-evergreen-runtime).
 - id: runtime-version
   type: input
   attributes:
@@ -83,7 +81,6 @@ body:
     label: Operating System
     multiple: true
     options:
-    - ----Please select----
     - Windows 10
     - Windows 11
     - Earlier than Windows 10 (deprecated)
